sm/tests/compile-fail/macro-states-none.rs
#[macro_use]
extern crate sm_macro;

sm!{
    Lock {}
    //~^ ERROR no rules expected the token `}`
}
